--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@react-google-maps/api": "^2.1.1",
     "axios": "^0.21.1",
     "react": "^17.0.2",
